# chromatography-tools

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
chromatography/: __init__.py  core.py
docs/: USER_GUIDE.md
tests/: TestFile.CSV  TestFile2.CSV  test_ab_number_extraction.py  test_chromatogram.py  test_edit_bounds_chart.py  test_multi_folder.py  test_pick_folder.py
