[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chromatography-tools"
version = "0.1.0"
description = "Interactive chromatography peak analysis tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "streamlit>=1.33",
    "plotly>=5.18",
    "kaleido>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["chromatography*"]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
